Implement handler and business for buying wager.
